feat: Add full localization support for 11 languages
- Add numeric id field to tip schema and interface
- Complete translations for all 43 tips in 11 languages:
  - English (en), Spanish (es), French (fr), Chinese (zh)
  - Arabic (ar), Bengali (bn), Hebrew (he), Hindi (hi)
  - Japanese (ja), Portuguese (pt), Russian (ru)
- All locales now have full parity (43/43 tips)
- Preserve keyboard shortcuts and code formatting
- Use native character scripts where applicable

--- a/data/locales/ar.json
+++ b/data/locales/ar.json
@@ -2,44 +2,219 @@
   "$schema": "../tips.schema.json",
   "tips": [
     {
-      "title": "Quick File Navigation",
-      "content": "Press `Ctrl+P` to quickly search and open files in your workspace. Start typing the filename to filter the list."
+      "id": 1,
+      "title": "التنقل السريع بين الملفات",
+      "content": "اضغط على `Ctrl+P` للبحث السريع وفتح الملفات في مساحة العمل. ابدأ بكتابة اسم الملف لتصفية القائمة."
     },
     {
-      "title": "Command Palette",
-      "content": "Access all VS Code commands with `Ctrl+Shift+P` (Windows/Linux) or `Cmd+Shift+P` (macOS). This is your gateway to everything VS Code can do!"
+      "id": 2,
+      "title": "لوحة الأوامر",
+      "content": "يمكنك الوصول إلى جميع أوامر VS Code باستخدام `Ctrl+Shift+P` (ويندوز/لينكس) أو `Cmd+Shift+P` (ماك). هذه هي بوابتك لكل إمكانيات VS Code!"
     },
     {
-      "title": "Multi-Cursor Editing",
-      "content": "Hold `Alt` (`Option` on macOS) and click to add multiple cursors. Edit multiple lines simultaneously!"
+      "id": 3,
+      "title": "تحرير متعدد المؤشرات",
+      "content": "اضغط مع الاستمرار على `Alt` (`Option` في ماك) وانقر لإضافة مؤشرات متعددة. حرر عدة أسطر في نفس الوقت!"
     },
     {
-      "title": "Zen Mode",
-      "content": "Toggle distraction-free coding with `Ctrl+K Z`. Press `Esc` twice to exit."
+      "id": 4,
+      "title": "وضع التركيز (Zen)",
+      "content": "فعّل وضع البرمجة بدون تشتيت باستخدام `Ctrl+K Z`. اضغط `Esc` مرتين للخروج."
     },
     {
-      "title": "Integrated Terminal",
-      "content": "Toggle the integrated terminal with `` Ctrl+` `` (backtick). Keep coding and running commands without switching windows."
+      "id": 5,
+      "title": "الطرفية المدمجة",
+      "content": "فعّل أو أخفِ الطرفية المدمجة باستخدام `` Ctrl+` `` (علامة التشكيل). استمر في البرمجة وتنفيذ الأوامر دون تبديل النوافذ."
     },
     {
-      "title": "Smart Selection",
-      "content": "Press `Ctrl+D` to select the next occurrence of the current selection. Great for renaming variables or making multiple similar changes!"
+      "id": 6,
+      "title": "تحديد ذكي",
+      "content": "اضغط `Ctrl+D` لتحديد التكرار التالي للتحديد الحالي. مفيد لإعادة تسمية المتغيرات أو إجراء تغييرات متشابهة متعددة!"
     },
     {
-      "title": "Split Editor Views",
-      "content": "Use `Ctrl+\\` to split the editor into multiple panes. Perfect for viewing different parts of the same file or comparing files side by side."
+      "id": 7,
+      "title": "تقسيم نافذة المحرر",
+      "content": "استخدم `Ctrl+\\` لتقسيم المحرر إلى عدة أجزاء. مثالي لعرض أجزاء مختلفة من نفس الملف أو مقارنة الملفات جنبًا إلى جنب."
     },
     {
-      "title": "Search Across Files",
-      "content": "Use `Ctrl+Shift+F` to search across all files in your workspace. Perfect for finding specific code or text patterns."
+      "id": 8,
+      "title": "البحث في جميع الملفات",
+      "content": "استخدم `Ctrl+Shift+F` للبحث في جميع ملفات مساحة العمل. مثالي للعثور على كود أو نص معين."
     },
     {
-      "title": "Quick File Creation",
-      "content": "Use `Ctrl+N` for a new untitled file. Add multiple files quickly without leaving your keyboard."
+      "id": 9,
+      "title": "إنشاء ملف جديد بسرعة",
+      "content": "استخدم `Ctrl+N` لإنشاء ملف جديد غير مسمى. أضف عدة ملفات بسرعة دون مغادرة لوحة المفاتيح."
     },
     {
-      "title": "IntelliSense Everywhere",
-      "content": "Press `Ctrl+Space` anywhere to manually trigger IntelliSense suggestions. Works in code, settings, and even JSON files!"
+      "id": 10,
+      "title": "اقتراحات IntelliSense في كل مكان",
+      "content": "اضغط `Ctrl+Space` في أي مكان لتفعيل اقتراحات IntelliSense يدويًا. تعمل في الكود والإعدادات وحتى ملفات JSON!"
+    },
+    {
+      "id": 11,
+      "title": "التنقل عبر المسارات (Breadcrumbs)",
+      "content": "انقر على المسارات أعلى المحرر أو اضغط `Ctrl+Shift+.` للتنقل السريع في بنية الملف."
+    },
+    {
+      "id": 12,
+      "title": "إصلاحات وإجراءات سريعة",
+      "content": "اضغط `Ctrl+.` عند ظهور رمز المصباح 💡 لعرض الإصلاحات السريعة وخيارات إعادة الهيكلة."
+    },
+    {
+      "id": 13,
+      "title": "التنقل للأمام والخلف",
+      "content": "استخدم `Alt+Left` و`Alt+Right` للتنقل بين مواضع المؤشر السابقة واللاحقة."
+    },
+    {
+      "id": 14,
+      "title": "تبديل تعليق السطر",
+      "content": "اضغط `Ctrl+/` لتبديل تعليق السطر. يعمل أيضًا مع عدة أسطر محددة."
+    },
+    {
+      "id": 15,
+      "title": "تحريك الأسطر للأعلى/للأسفل",
+      "content": "استخدم `Alt+Up` أو `Alt+Down` لتحريك الأسطر للأعلى أو للأسفل. مفيد لإعادة ترتيب الكود بسرعة."
+    },
+    {
+      "id": 16,
+      "title": "تنسيق المستند",
+      "content": "اضغط `Shift+Alt+F` لتنسيق المستند بالكامل. حافظ على كود نظيف ومتناسق."
+    },
+    {
+      "id": 17,
+      "title": "التنقل عبر الخريطة المصغرة",
+      "content": "استخدم الخريطة المصغرة على يمين المحرر للتمرير السريع في الملفات الكبيرة. فعّلها بـ `Ctrl+Shift+P` وابحث عن 'Toggle Minimap'."
+    },
+    {
+      "id": 18,
+      "title": "الانتقال إلى التعريف",
+      "content": "اضغط `F12` للانتقال إلى تعريف الرمز. اضغط مع الاستمرار على `Ctrl` واستعرض الكود لمعاينة التعريفات."
+    },
+    {
+      "id": 19,
+      "title": "إيجاد جميع المراجع",
+      "content": "اضغط `Shift+Alt+F12` لإيجاد جميع المراجع للرمز الحالي. مفيد لفهم كيفية استخدام الكود."
+    },
+    {
+      "id": 20,
+      "title": "إعادة تسمية الرمز",
+      "content": "اضغط `F2` لإعادة تسمية الرمز وتحديث جميع المراجع تلقائيًا."
+    },
+    {
+      "id": 21,
+      "title": "لوحة المشاكل",
+      "content": "استخدم `Ctrl+Shift+M` لعرض لوحة المشاكل ومشاهدة جميع الأخطاء والتنبيهات في مساحة العمل."
+    },
+    {
+      "id": 22,
+      "title": "فتح الملف السابق بسرعة",
+      "content": "اضغط `Ctrl+Tab` للتبديل السريع بين الملفات المستخدمة مؤخرًا. استمر بالضغط لرؤية المزيد من الخيارات."
+    },
+    {
+      "id": 23,
+      "title": "تبديل التفاف الأسطر",
+      "content": "اضغط `Alt+Z` لتبديل التفاف الأسطر. لا مزيد من التمرير الأفقي للأسطر الطويلة!"
+    },
+    {
+      "id": 24,
+      "title": "طي/توسيع الكود",
+      "content": "استخدم `Ctrl+Shift+[` و`Ctrl+Shift+]` لطي أو توسيع كتل الكود. حافظ على محررك مرتبًا."
+    },
+    {
+      "id": 25,
+      "title": "التحرير جنبًا إلى جنب",
+      "content": "اسحب علامة تبويب الملف إلى جانب المحرر لفتحه جنبًا إلى جنب. مثالي للمقارنة أو الرجوع للكود."
+    },
+    {
+      "id": 26,
+      "title": "تحديد الأعمدة",
+      "content": "اضغط مع الاستمرار على `Shift+Alt` أثناء سحب الماوس لتحديد نص في أعمدة. مثالي للنصوص المنظمة."
+    },
+    {
+      "id": 27,
+      "title": "تاريخ تنقل الملف",
+      "content": "استخدم `Alt+Left` و`Alt+Right` للتنقل في تاريخ تنقل الملف، كما في متصفح الإنترنت."
+    },
+    {
+      "id": 28,
+      "title": "تلميحات المعاملات السريعة",
+      "content": "اضغط `Ctrl+Shift+Space` لرؤية تلميحات المعاملات للدوال. مفيد لتذكر المعاملات."
+    },
+    {
+      "id": 29,
+      "title": "تبديل سمة الألوان",
+      "content": "بدّل سمة الألوان بسرعة باستخدام `Ctrl+K Ctrl+T`. جرّب سمات مختلفة للعثور على بيئة البرمجة المثالية."
+    },
+    {
+      "id": 30,
+      "title": "تكرار السطر",
+      "content": "اضغط `Shift+Alt+Up` أو `Shift+Alt+Down` لنسخ الأسطر للأعلى أو للأسفل. لا حاجة للنسخ واللصق!"
+    },
+    {
+      "id": 31,
+      "title": "دمج الأسطر",
+      "content": "استخدم `Ctrl+J` لدمج عدة أسطر في سطر واحد. حدد عدة أسطر أولاً لدمجها جميعًا!"
+    },
+    {
+      "id": 32,
+      "title": "تبديل شريط النشاط",
+      "content": "وفّر مساحة الشاشة بتبديل شريط النشاط باستخدام `Ctrl+B`. استعد المساحة الأفقية الثمينة!"
+    },
+    {
+      "id": 33,
+      "title": "إكمال IntelliSense باستخدام Tab",
+      "content": "بعد تفعيل IntelliSense، استخدم `Tab` بدلاً من `Enter` لإكمال الاقتراح واستبدال الكلمة عند المؤشر."
+    },
+    {
+      "id": 34,
+      "title": "معاينة المراجع",
+      "content": "استخدم `Shift+F12` لمعاينة المراجع دون مغادرة موقعك الحالي. انقر 'فتح في الجانب' لرؤية التفاصيل الكاملة!"
+    },
+    {
+      "id": 35,
+      "title": "مسح الطرفية",
+      "content": "امسح الطرفية المدمجة باستخدام `Ctrl+K` (أو اكتب 'clear'). حافظ على مساحة العمل مرتبة!"
+    },
+    {
+      "id": 36,
+      "title": "حفظ الكل",
+      "content": "استخدم `Ctrl+K S` لحفظ جميع الملفات المفتوحة دفعة واحدة. لا تنس حفظ التغييرات!"
+    },
+    {
+      "id": 37,
+      "title": "البحث حسب الرمز",
+      "content": "اضغط `Ctrl+Shift+O` للانتقال السريع إلى الرموز (دوال، أصناف، إلخ) داخل الملف الحالي."
+    },
+    {
+      "id": 38,
+      "title": "البحث عن رمز في مساحة العمل",
+      "content": "استخدم `Ctrl+T` للبحث عن الرموز في جميع مساحة العمل. اعثر على أي دالة أو صنف فورًا!"
+    },
+    {
+      "id": 39,
+      "title": "الحفظ التلقائي",
+      "content": "فعّل الحفظ التلقائي من قائمة ملف > الحفظ التلقائي أو عيّن `files.autoSave` إلى 'afterDelay'. لن تفقد تغييراتك مجددًا!"
+    },
+    {
+      "id": 40,
+      "title": "مرجع اختصارات لوحة المفاتيح",
+      "content": "اضغط `Ctrl+K Ctrl+R` لفتح ملف PDF لاختصارات لوحة المفاتيح. رائع لتعلم اختصارات جديدة!"
+    },
+    {
+      "id": 41,
+      "title": "زيادة/إنقاص المسافة البادئة",
+      "content": "استخدم `Ctrl+]` لزيادة المسافة البادئة و`Ctrl+[` لإنقاصها. يعمل مع عدة أسطر محددة!"
+    },
+    {
+      "id": 42,
+      "title": "تقسيم الطرفية",
+      "content": "قسّم الطرفية المدمجة باستخدام زر + في شريط العنوان أو أمر 'Split Terminal'."
+    },
+    {
+      "id": 43,
+      "title": "إزالة المسافات الزائدة في نهاية السطر",
+      "content": "استخدم `Ctrl+K Ctrl+X` لإزالة المسافات الزائدة في نهاية السطر. حافظ على كودك نظيفًا تلقائيًا!"
     }
   ]
 }
