--- a/data/locales/bn.json
+++ b/data/locales/bn.json
@@ -2,44 +2,219 @@
   "$schema": "../tips.schema.json",
   "tips": [
     {
-      "title": "Quick File Navigation",
-      "content": "Press `Ctrl+P` to quickly search and open files in your workspace. Start typing the filename to filter the list."
+      "id": 1,
+      "title": "দ্রুত ফাইল নেভিগেশন",
+      "content": "আপনার ওয়ার্কস্পেসে দ্রুত ফাইল খুঁজে এবং খুলতে `Ctrl+P` চাপুন। তালিকা ফিল্টার করতে ফাইলের নাম টাইপ করা শুরু করুন।"
     },
     {
-      "title": "Command Palette",
-      "content": "Access all VS Code commands with `Ctrl+Shift+P` (Windows/Linux) or `Cmd+Shift+P` (macOS). This is your gateway to everything VS Code can do!"
+      "id": 2,
+      "title": "কমান্ড প্যালেট",
+      "content": "`Ctrl+Shift+P` (Windows/Linux) বা `Cmd+Shift+P` (macOS) দিয়ে সব VS Code কমান্ড অ্যাক্সেস করুন। এটি VS Code এর সব ক্ষমতার প্রবেশদ্বার!"
     },
     {
-      "title": "Multi-Cursor Editing",
-      "content": "Hold `Alt` (`Option` on macOS) and click to add multiple cursors. Edit multiple lines simultaneously!"
+      "id": 3,
+      "title": "মাল্টি-কার্সার এডিটিং",
+      "content": "`Alt` (`macOS এ Option`) চেপে ধরে ক্লিক করুন একাধিক কার্সার যোগ করতে। একসাথে একাধিক লাইন এডিট করুন!"
     },
     {
-      "title": "Zen Mode",
-      "content": "Toggle distraction-free coding with `Ctrl+K Z`. Press `Esc` twice to exit."
+      "id": 4,
+      "title": "জেন মোড",
+      "content": "`Ctrl+K Z` দিয়ে বিভ্রান্তিমুক্ত কোডিং টগল করুন। বের হতে `Esc` দুবার চাপুন।"
     },
     {
-      "title": "Integrated Terminal",
-      "content": "Toggle the integrated terminal with `` Ctrl+` `` (backtick). Keep coding and running commands without switching windows."
+      "id": 5,
+      "title": "ইন্টিগ্রেটেড টার্মিনাল",
+      "content": "`` Ctrl+` `` (ব্যাকটিক) দিয়ে ইন্টিগ্রেটেড টার্মিনাল টগল করুন। উইন্ডো পরিবর্তন না করে কোডিং এবং কমান্ড চালিয়ে যান।"
     },
     {
-      "title": "Smart Selection",
-      "content": "Press `Ctrl+D` to select the next occurrence of the current selection. Great for renaming variables or making multiple similar changes!"
+      "id": 6,
+      "title": "স্মার্ট সিলেকশন",
+      "content": "বর্তমান সিলেকশনের পরবর্তী উপস্থিতি সিলেক্ট করতে `Ctrl+D` চাপুন। ভেরিয়েবল রিনেম বা একাধিক অনুরূপ পরিবর্তনের জন্য দুর্দান্ত!"
     },
     {
-      "title": "Split Editor Views",
-      "content": "Use `Ctrl+\\` to split the editor into multiple panes. Perfect for viewing different parts of the same file or comparing files side by side."
+      "id": 7,
+      "title": "স্প্লিট এডিটর ভিউ",
+      "content": "এডিটরকে একাধিক প্যানে বিভক্ত করতে `Ctrl+\\` ব্যবহার করুন। একই ফাইলের বিভিন্ন অংশ দেখতে বা ফাইল পাশাপাশি তুলনা করার জন্য নিখুঁত।"
     },
     {
-      "title": "Search Across Files",
-      "content": "Use `Ctrl+Shift+F` to search across all files in your workspace. Perfect for finding specific code or text patterns."
+      "id": 8,
+      "title": "সব ফাইলে সার্চ",
+      "content": "আপনার ওয়ার্কস্পেসের সব ফাইলে সার্চ করতে `Ctrl+Shift+F` ব্যবহার করুন। নির্দিষ্ট কোড বা টেক্সট প্যাটার্ন খোঁজার জন্য নিখুঁত।"
     },
     {
-      "title": "Quick File Creation",
-      "content": "Use `Ctrl+N` for a new untitled file. Add multiple files quickly without leaving your keyboard."
+      "id": 9,
+      "title": "দ্রুত ফাইল তৈরি",
+      "content": "নতুন আনট্যাইটেলড ফাইলের জন্য `Ctrl+N` ব্যবহার করুন। কিবোর্ড না ছেড়ে দ্রুত একাধিক ফাইল যোগ করুন।"
     },
     {
-      "title": "IntelliSense Everywhere",
-      "content": "Press `Ctrl+Space` anywhere to manually trigger IntelliSense suggestions. Works in code, settings, and even JSON files!"
+      "id": 10,
+      "title": "সর্বত্র ইন্টেলিসেন্স",
+      "content": "ইন্টেলিসেন্স সাজেশন ম্যানুয়ালি ট্রিগার করতে যেকোনো জায়গায় `Ctrl+Space` চাপুন। কোড, সেটিংস, এমনকি JSON ফাইলেও কাজ করে!"
+    },
+    {
+      "id": 11,
+      "title": "ব্রেডক্রাম্ব নেভিগেশন",
+      "content": "এডিটরের উপরে ব্রেডক্রাম্বে ক্লিক করুন বা আপনার ফাইলের কাঠামোর মধ্য দিয়ে দ্রুত নেভিগেট করতে `Ctrl+Shift+.` চাপুন।"
+    },
+    {
+      "id": 12,
+      "title": "দ্রুত ফিক্স এবং অ্যাকশন",
+      "content": "লাইটবাল্ব 💡 দেখলে `Ctrl+.` চাপুন দ্রুত ফিক্স এবং রিফ্যাক্টরিং অপশন দেখতে।"
+    },
+    {
+      "id": 13,
+      "title": "পিছনে এবং এগিয়ে নেভিগেট",
+      "content": "আপনার কার্সার পজিশনের মধ্যে পিছনে এবং এগিয়ে নেভিগেট করতে `Alt+Left` এবং `Alt+Right` ব্যবহার করুন।"
+    },
+    {
+      "id": 14,
+      "title": "লাইন কমেন্ট টগল",
+      "content": "লাইন কমেন্ট টগল করতে `Ctrl+/` চাপুন। একাধিক সিলেক্টেড লাইনেও কাজ করে!"
+    },
+    {
+      "id": 15,
+      "title": "লাইন উপরে/নিচে সরান",
+      "content": "লাইন উপরে বা নিচে সরাতে `Alt+Up` বা `Alt+Down` ব্যবহার করুন। কোড দ্রুত পুনর্বিন্যাসের জন্য দুর্দান্ত!"
+    },
+    {
+      "id": 16,
+      "title": "ডকুমেন্ট ফরম্যাট",
+      "content": "আপনার সম্পূর্ণ ডকুমেন্ট ফরম্যাট করতে `Shift+Alt+F` চাপুন। আপনার কোড পরিচ্ছন্ন এবং সামঞ্জস্যপূর্ণ রাখুন!"
+    },
+    {
+      "id": 17,
+      "title": "মিনিম্যাপ নেভিগেশন",
+      "content": "বড় ফাইলে দ্রুত স্ক্রলিংয়ের জন্য এডিটরের ডানদিকের মিনিম্যাপ ব্যবহার করুন। `Ctrl+Shift+P` দিয়ে 'Toggle Minimap' খুঁজে এটি টগল করুন।"
+    },
+    {
+      "id": 18,
+      "title": "ডেফিনিশনে যান",
+      "content": "সিম্বলের ডেফিনিশনে জাম্প করতে `F12` চাপুন। `Ctrl` চেপে ধরে কোডের উপর হোভার করে ডেফিনিশন পিক করুন!"
+    },
+    {
+      "id": 19,
+      "title": "সব রেফারেন্স খুঁজুন",
+      "content": "বর্তমান সিম্বলের সব রেফারেন্স খুঁজতে `Shift+Alt+F12` চাপুন। আপনার প্রজেক্টে কোড কীভাবে ব্যবহৃত হয় তা বোঝার জন্য দুর্দান্ত।"
+    },
+    {
+      "id": 20,
+      "title": "সিম্বল রিনেম",
+      "content": "সিম্বল রিনেম করতে এবং আপনার কোড জুড়ে সব রেফারেন্স স্বয়ংক্রিয়ভাবে আপডেট করতে `F2` চাপুন।"
+    },
+    {
+      "id": 21,
+      "title": "সমস্যা প্যানেল",
+      "content": "সমস্যা প্যানেল টগল করতে এবং আপনার ওয়ার্কস্পেসের সব এরর ও ওয়ার্নিং দেখতে `Ctrl+Shift+M` ব্যবহার করুন।"
+    },
+    {
+      "id": 22,
+      "title": "দ্রুত পূর্ববর্তী ফাইল খুলুন",
+      "content": "সাম্প্রতিক ব্যবহৃত ফাইলের মধ্যে দ্রুত সুইচ করতে `Ctrl+Tab` চাপুন। আরো অপশন দেখতে `Ctrl` ধরে রাখুন!"
+    },
+    {
+      "id": 23,
+      "title": "ওয়ার্ড র‍্যাপ টগল",
+      "content": "ওয়ার্ড র‍্যাপ টগল করতে `Alt+Z` চাপুন। লম্বা লাইনের জন্য আর হরিজন্টাল স্ক্রলিং নেই!"
+    },
+    {
+      "id": 24,
+      "title": "কোড ফোল্ড/আনফোল্ড",
+      "content": "কোড ব্লক ফোল্ড এবং আনফোল্ড করতে `Ctrl+Shift+[` এবং `Ctrl+Shift+]` ব্যবহার করুন। আপনার এডিটর পরিপাটি রাখুন!"
+    },
+    {
+      "id": 25,
+      "title": "পাশাপাশি এডিটিং",
+      "content": "ফাইল ট্যাব এডিটরের পাশে ড্র্যাগ করে পাশাপাশি খুলুন। কোড তুলনা বা রেফারেন্সের জন্য নিখুঁত!"
+    },
+    {
+      "id": 26,
+      "title": "কলাম সিলেকশন",
+      "content": "কলামে টেক্সট সিলেক্ট করতে মাউস ড্র্যাগ করার সময় `Shift+Alt` চেপে ধরুন। স্ট্রাকচার্ড টেক্সট বা টেবিল এডিটের জন্য নিখুঁত!"
+    },
+    {
+      "id": 27,
+      "title": "ফাইল হিস্টরি নেভিগেট",
+      "content": "ওয়েব ব্রাউজারের মতো আপনার ফাইল নেভিগেশন হিস্টরির মধ্য দিয়ে নেভিগেট করতে `Alt+Left` এবং `Alt+Right` ব্যবহার করুন!"
+    },
+    {
+      "id": 28,
+      "title": "দ্রুত প্যারামিটার হিন্ট",
+      "content": "ফাংশনের জন্য প্যারামিটার হিন্ট দেখতে `Ctrl+Shift+Space` চাপুন। ফাংশন আর্গুমেন্ট মনে রাখার জন্য দুর্দান্ত!"
+    },
+    {
+      "id": 29,
+      "title": "কালার থিম সুইচিং",
+      "content": "`Ctrl+K Ctrl+T` দিয়ে দ্রুত কালার থিম সুইচ করুন। আপনার নিখুঁত কোডিং পরিবেশ খুঁজতে বিভিন্ন থিম চেষ্টা করুন!"
+    },
+    {
+      "id": 30,
+      "title": "লাইন ডুপ্লিকেট",
+      "content": "লাইন উপরে বা নিচে কপি করতে `Shift+Alt+Up` বা `Shift+Alt+Down` চাপুন। কপি পেস্টের প্রয়োজন নেই!"
+    },
+    {
+      "id": 31,
+      "title": "লাইন জয়েন",
+      "content": "একাধিক লাইনকে একটিতে জয়েন করতে `Ctrl+J` ব্যবহার করুন। প্রথমে একাধিক লাইন সিলেক্ট করুন সবগুলো জয়েন করতে!"
+    },
+    {
+      "id": 32,
+      "title": "অ্যাক্টিভিটি বার টগল",
+      "content": "`Ctrl+B` দিয়ে অ্যাক্টিভিটি বার টগল করে স্ক্রিন স্পেস সেভ করুন। মূল্যবান হরিজন্টাল স্পেস ফিরে পান!"
+    },
+    {
+      "id": 33,
+      "title": "ইন্টেলিসেন্স ট্যাব কমপ্লিশন",
+      "content": "ইন্টেলিসেন্স ইনভোক করার পর, সাজেশন কমপ্লিট করতে এবং কার্সারে শব্দ রিপ্লেস করতে `Enter` এর বদলে `Tab` ব্যবহার করুন।"
+    },
+    {
+      "id": 34,
+      "title": "পিক রেফারেন্স",
+      "content": "বর্তমান অবস্থান না ছেড়ে রেফারেন্স পিক করতে `Shift+F12` ব্যবহার করুন। সম্পূর্ণ বিবরণ দেখতে 'Open to the Side' ক্লিক করুন!"
+    },
+    {
+      "id": 35,
+      "title": "টার্মিনাল ক্লিয়ার",
+      "content": "টার্মিনালে `Ctrl+K` দিয়ে (বা 'clear' টাইপ করে) ইন্টিগ্রেটেড টার্মিনাল ক্লিয়ার করুন। আপনার ওয়ার্কস্পেস পরিপাটি রাখুন!"
+    },
+    {
+      "id": 36,
+      "title": "সব সেভ",
+      "content": "একসাথে সব খোলা ফাইল সেভ করতে `Ctrl+K S` ব্যবহার করুন। আপনার পরিবর্তন সেভ করতে ভুলবেন না!"
+    },
+    {
+      "id": 37,
+      "title": "সিম্বল দিয়ে খুঁজুন",
+      "content": "বর্তমান ফাইলের মধ্যে সিম্বল (ফাংশন, ক্লাস, ইত্যাদি) এ দ্রুত নেভিগেট করতে `Ctrl+Shift+O` চাপুন।"
+    },
+    {
+      "id": 38,
+      "title": "ওয়ার্কস্পেস সিম্বল সার্চ",
+      "content": "আপনার সম্পূর্ণ ওয়ার্কস্পেসে সিম্বল সার্চ করতে `Ctrl+T` ব্যবহার করুন। যেকোনো ফাংশন বা ক্লাস তৎক্ষণাৎ খুঁজে পান!"
+    },
+    {
+      "id": 39,
+      "title": "অটো সেভ",
+      "content": "File > Auto Save এর মাধ্যমে বা সেটিংসে `files.autoSave` কে 'afterDelay' সেট করে অটো সেভ এনাবল করুন। আর কখনো পরিবর্তন হারাবেন না!"
+    },
+    {
+      "id": 40,
+      "title": "কিবোর্ড শর্টকাট রেফারেন্স",
+      "content": "কিবোর্ড শর্টকাটের PDF ফাইল খুলতে `Ctrl+K Ctrl+R` চাপুন। নতুন শর্টকাট শেখার জন্য দুর্দান্ত!"
+    },
+    {
+      "id": 41,
+      "title": "ইন্ডেন্ট বাড়ান/কমান",
+      "content": "ইন্ডেন্ট বাড়াতে `Ctrl+]` এবং কমাতে `Ctrl+[` ব্যবহার করুন। একাধিক সিলেক্টেড লাইনেও কাজ করে!"
+    },
+    {
+      "id": 42,
+      "title": "টার্মিনাল স্প্লিট",
+      "content": "টাইটেল বারের + বাটন বা 'Split Terminal' কমান্ড ব্যবহার করে ইন্টিগ্রেটেড টার্মিনাল স্প্লিট করুন।"
+    },
+    {
+      "id": 43,
+      "title": "ট্রেইলিং হোয়াইটস্পেস রিমুভ",
+      "content": "ট্রেইলিং হোয়াইটস্পেস রিমুভ করতে `Ctrl+K Ctrl+X` ব্যবহার করুন। আপনার কোড স্বয়ংক্রিয়ভাবে পরিচ্ছন্ন রাখুন!"
     }
   ]
 }
