--- a/data/locales/he.json
+++ b/data/locales/he.json
@@ -2,44 +2,219 @@
   "$schema": "../tips.schema.json",
   "tips": [
     {
-      "title": "Quick File Navigation",
-      "content": "Press `Ctrl+P` to quickly search and open files in your workspace. Start typing the filename to filter the list."
+      "id": 1,
+      "title": "ניווט מהיר בקבצים",
+      "content": "לחץ על `Ctrl+P` כדי לחפש ולפתוח קבצים במהירות במרחב העבודה שלך. התחל להקליד את שם הקובץ כדי לסנן את הרשימה."
     },
     {
-      "title": "Command Palette",
-      "content": "Access all VS Code commands with `Ctrl+Shift+P` (Windows/Linux) or `Cmd+Shift+P` (macOS). This is your gateway to everything VS Code can do!"
+      "id": 2,
+      "title": "לוח הפקודות",
+      "content": "גש לכל פקודות VS Code עם `Ctrl+Shift+P` (Windows/Linux) או `Cmd+Shift+P` (macOS). זה השער שלך לכל מה ש-VS Code יכול לעשות!"
     },
     {
-      "title": "Multi-Cursor Editing",
-      "content": "Hold `Alt` (`Option` on macOS) and click to add multiple cursors. Edit multiple lines simultaneously!"
+      "id": 3,
+      "title": "עריכה מרובת סמנים",
+      "content": "החזק `Alt` (`Option` ב-macOS) ולחץ כדי להוסיף סמנים מרובים. ערוך מספר שורות בו זמנית!"
     },
     {
-      "title": "Zen Mode",
-      "content": "Toggle distraction-free coding with `Ctrl+K Z`. Press `Esc` twice to exit."
+      "id": 4,
+      "title": "מצב זן",
+      "content": "החלף לקידוד ללא הסחות דעת עם `Ctrl+K Z`. לחץ על `Esc` פעמיים כדי לצאת."
     },
     {
-      "title": "Integrated Terminal",
-      "content": "Toggle the integrated terminal with `` Ctrl+` `` (backtick). Keep coding and running commands without switching windows."
+      "id": 5,
+      "title": "טרמינל משולב",
+      "content": "החלף את הטרמינל המשולב עם `` Ctrl+` `` (בקטיק). המשך לתכנת ולהריץ פקודות מבלי להחליף חלונות."
     },
     {
-      "title": "Smart Selection",
-      "content": "Press `Ctrl+D` to select the next occurrence of the current selection. Great for renaming variables or making multiple similar changes!"
+      "id": 6,
+      "title": "בחירה חכמה",
+      "content": "לחץ על `Ctrl+D` כדי לבחור את המופע הבא של הבחירה הנוכחית. מעולה לשינוי שמות משתנים או לביצוע מספר שינויים דומים!"
     },
     {
-      "title": "Split Editor Views",
-      "content": "Use `Ctrl+\\` to split the editor into multiple panes. Perfect for viewing different parts of the same file or comparing files side by side."
+      "id": 7,
+      "title": "פיצול תצוגות העורך",
+      "content": "השתמש ב-`Ctrl+\\` כדי לפצל את העורך למספר חלוניות. מושלם לצפיה בחלקים שונים של אותו קובץ או להשוות קבצים זה לצד זה."
     },
     {
-      "title": "Search Across Files",
-      "content": "Use `Ctrl+Shift+F` to search across all files in your workspace. Perfect for finding specific code or text patterns."
+      "id": 8,
+      "title": "חיפוש בכל הקבצים",
+      "content": "השתמש ב-`Ctrl+Shift+F` כדי לחפש בכל הקבצים במרחב העבודה שלך. מושלם למציאת קוד או דפוסי טקסט ספציפיים."
     },
     {
-      "title": "Quick File Creation",
-      "content": "Use `Ctrl+N` for a new untitled file. Add multiple files quickly without leaving your keyboard."
+      "id": 9,
+      "title": "יצירת קובץ מהירה",
+      "content": "השתמש ב-`Ctrl+N` עבור קובץ חדש ללא שם. הוסף קבצים מרובים במהירות מבלי לעזוב את המקלדת."
     },
     {
-      "title": "IntelliSense Everywhere",
-      "content": "Press `Ctrl+Space` anywhere to manually trigger IntelliSense suggestions. Works in code, settings, and even JSON files!"
+      "id": 10,
+      "title": "IntelliSense בכל מקום",
+      "content": "לחץ על `Ctrl+Space` בכל מקום כדי להפעיל הצעות IntelliSense באופן ידני. עובד בקוד, הגדרות ואפילו בקבצי JSON!"
+    },
+    {
+      "id": 11,
+      "title": "ניווט פירורי לחם",
+      "content": "לחץ על פירורי הלחם מעל העורך או לחץ על `Ctrl+Shift+.` כדי לנווט במהירות דרך מבנה הקובץ שלך."
+    },
+    {
+      "id": 12,
+      "title": "תיקון מהיר ופעולות",
+      "content": "לחץ על `Ctrl+.` כשאתה רואה נורה 💡 כדי לראות תיקונים מהירים ואפשרויות מחדש."
+    },
+    {
+      "id": 13,
+      "title": "נווט אחורה וקדימה",
+      "content": "השתמש ב-`Alt+Left` ו-`Alt+Right` כדי לנווט אחורה וקדימה דרך מיקומי הסמן שלך."
+    },
+    {
+      "id": 14,
+      "title": "החלף הערת שורה",
+      "content": "לחץ על `Ctrl+/` כדי להחליף הערות שורה. עובד גם עם מספר שורות שנבחרו!"
+    },
+    {
+      "id": 15,
+      "title": "הזז שורות למעלה/למטה",
+      "content": "השתמש ב-`Alt+Up` או `Alt+Down` כדי להזיז שורות למעלה או למטה. נהדר לארגון מחדש של קוד במהירות!"
+    },
+    {
+      "id": 16,
+      "title": "עצב מסמך",
+      "content": "לחץ על `Shift+Alt+F` כדי לעצב את המסמך כולו. שמור על הקוד שלך נקי ועקבי!"
+    },
+    {
+      "id": 17,
+      "title": "ניווט מיני-מפה",
+      "content": "השתמש במיני-מפה בצד ימין של העורך לגלילה מהירה דרך קבצים גדולים. החלף אותה עם `Ctrl+Shift+P` וחפש 'Toggle Minimap'."
+    },
+    {
+      "id": 18,
+      "title": "עבור להגדרה",
+      "content": "לחץ על `F12` כדי לקפוץ להגדרה של סמל. החזק `Ctrl` והעבר את העכבר מעל קוד כדי להציץ בהגדרות!"
+    },
+    {
+      "id": 19,
+      "title": "מצא את כל ההפניות",
+      "content": "לחץ על `Shift+Alt+F12` כדי למצוא את כל ההפניות לסמל הנוכחי. נהדר להבנה איך קוד משמש בפרויקט שלך."
+    },
+    {
+      "id": 20,
+      "title": "שנה שם סמל",
+      "content": "לחץ על `F2` כדי לשנות שם של סמל ולעדכן אוטומטית את כל ההפניות בקוד שלך."
+    },
+    {
+      "id": 21,
+      "title": "לוח בעיות",
+      "content": "השתמש ב-`Ctrl+Shift+M` כדי להחליף את לוח הבעיות ולראות את כל השגיאות והאזהרות במרחב העבודה שלך."
+    },
+    {
+      "id": 22,
+      "title": "פתח קובץ קודם במהירות",
+      "content": "לחץ על `Ctrl+Tab` כדי להחליף במהירות בין קבצים שנעשה בהם שימוש לאחרונה. החזק את `Ctrl` כדי לראות עוד אפשרויות!"
+    },
+    {
+      "id": 23,
+      "title": "החלף גלישת מילים",
+      "content": "לחץ על `Alt+Z` כדי להחליף גלישת מילים. לא עוד גלילה אופקית לשורות ארוכות!"
+    },
+    {
+      "id": 24,
+      "title": "קפל/בטל קיפול קוד",
+      "content": "השתמש ב-`Ctrl+Shift+[` ו-`Ctrl+Shift+]` כדי לקפל ולבטל קיפול של בלוקי קוד. שמור על העורך שלך מסודר!"
+    },
+    {
+      "id": 25,
+      "title": "עריכה צד בצד",
+      "content": "גרור ושחרר כרטיסיית קובץ לצד העורך כדי לפתוח אותה צד בצד. מושלם להשוואה או להפנייה לקוד!"
+    },
+    {
+      "id": 26,
+      "title": "בחירת עמודות",
+      "content": "החזק `Shift+Alt` בזמן גרירת העכבר כדי לבחור טקסט בעמודות. מושלם לעריכת טקסט מובנה או טבלאות!"
+    },
+    {
+      "id": 27,
+      "title": "נווט בהיסטוריית קבצים",
+      "content": "השתמש ב-`Alt+Left` ו-`Alt+Right` כדי לנווט דרך היסטוריית הניווט בקבצים שלך, בדיוק כמו דפדפן אינטרנט!"
+    },
+    {
+      "id": 28,
+      "title": "רמזי פרמטרים מהירים",
+      "content": "לחץ על `Ctrl+Shift+Space` כדי לראות רמזי פרמטרים לפונקציות. נהדר לזכירת ארגומנטים של פונקציות!"
+    },
+    {
+      "id": 29,
+      "title": "החלפת ערכות צבעים",
+      "content": "החלף ערכות צבעים במהירות עם `Ctrl+K Ctrl+T`. נסה ערכות שונות כדי למצוא את סביבת הקידוד המושלמת שלך!"
+    },
+    {
+      "id": 30,
+      "title": "שכפל שורה",
+      "content": "לחץ על `Shift+Alt+Up` או `Shift+Alt+Down` כדי להעתיק שורות למעלה או למטה. לא צריך להעתיק ולהדביק!"
+    },
+    {
+      "id": 31,
+      "title": "חבר שורות",
+      "content": "השתמש ב-`Ctrl+J` כדי לחבר מספר שורות לאחת. בחר קודם מספר שורות כדי לחבר את כולן!"
+    },
+    {
+      "id": 32,
+      "title": "החלף סרגל פעילות",
+      "content": "חסוך במקום מסך על ידי החלפת סרגל הפעילות עם `Ctrl+B`. החזר את המרחב האופקי היקר!"
+    },
+    {
+      "id": 33,
+      "title": "השלמת Tab של IntelliSense",
+      "content": "אחרי הפעלת IntelliSense, השתמש ב-`Tab` במקום `Enter` כדי להשלים את ההצעה ולהחליף את המילה בסמן."
+    },
+    {
+      "id": 34,
+      "title": "הצץ בהפניות",
+      "content": "השתמש ב-`Shift+F12` כדי להציץ בהפניות מבלי לעזוב את המיקום הנוכחי שלך. לחץ על 'פתח לצד' כדי לראות פרטים מלאים!"
+    },
+    {
+      "id": 35,
+      "title": "נקה טרמינל",
+      "content": "נקה את הטרמינל המשולב עם `Ctrl+K` בטרמינל (או הקלד 'clear'). שמור על מרחב העבודה שלך מסודר!"
+    },
+    {
+      "id": 36,
+      "title": "שמור הכל",
+      "content": "השתמש ב-`Ctrl+K S` כדי לשמור את כל הקבצים הפתוחים בבת אחת. לעולם אל תשכח לשמור את השינויים שלך!"
+    },
+    {
+      "id": 37,
+      "title": "מצא לפי סמל",
+      "content": "לחץ על `Ctrl+Shift+O` כדי לנווט במהירות לסמלים (פונקציות, מחלקות וכו') בתוך הקובץ הנוכחי."
+    },
+    {
+      "id": 38,
+      "title": "חיפוש סמלים במרחב העבודה",
+      "content": "השתמש ב-`Ctrl+T` כדי לחפש סמלים בכל מרחב העבודה שלך. מצא כל פונקציה או מחלקה מיידית!"
+    },
+    {
+      "id": 39,
+      "title": "שמירה אוטומטית",
+      "content": "הפעל שמירה אוטומטית דרך File > Auto Save או הגדר `files.autoSave` ל-'afterDelay' בהגדרות. לעולם לא תאבד שינויים שוב!"
+    },
+    {
+      "id": 40,
+      "title": "הפניה לקיצורי מקלדת",
+      "content": "לחץ על `Ctrl+K Ctrl+R` כדי לפתוח קובץ PDF של קיצורי מקלדת. נהדר ללמידת קיצורים חדשים!"
+    },
+    {
+      "id": 41,
+      "title": "הגדל/הקטן הזחה",
+      "content": "השתמש ב-`Ctrl+]` כדי להגדיל הזחה ו-`Ctrl+[` כדי להקטין אותה. עובד עם מספר שורות שנבחרו!"
+    },
+    {
+      "id": 42,
+      "title": "פצל טרמינל",
+      "content": "פצל את הטרמינל המשולב באמצעות כפתור + בסרגל הכותרת או פקודת 'Split Terminal'."
+    },
+    {
+      "id": 43,
+      "title": "הסר רווח לבן נגרר",
+      "content": "השתמש ב-`Ctrl+K Ctrl+X` כדי להסיר רווח לבן נגרר. שמור על הקוד שלך נקי אוטומטית!"
     }
   ]
 }
