--- a/data/locales/hi.json
+++ b/data/locales/hi.json
@@ -2,44 +2,219 @@
   "$schema": "../tips.schema.json",
   "tips": [
     {
-      "title": "Quick File Navigation",
-      "content": "Press `Ctrl+P` to quickly search and open files in your workspace. Start typing the filename to filter the list."
+      "id": 1,
+      "title": "त्वरित फ़ाइल नेविगेशन",
+      "content": "अपने वर्कस्पेस में फ़ाइलों को त्वरित रूप से खोजने और खोलने के लिए `Ctrl+P` दबाएं। सूची को फ़िल्टर करने के लिए फ़ाइल नाम टाइप करना शुरू करें।"
     },
     {
-      "title": "Command Palette",
-      "content": "Access all VS Code commands with `Ctrl+Shift+P` (Windows/Linux) or `Cmd+Shift+P` (macOS). This is your gateway to everything VS Code can do!"
+      "id": 2,
+      "title": "कमांड पैलेट",
+      "content": "`Ctrl+Shift+P` (Windows/Linux) या `Cmd+Shift+P` (macOS) के साथ सभी VS Code कमांड तक पहुंचें। यह VS Code की सभी क्षमताओं का प्रवेश द्वार है!"
     },
     {
-      "title": "Multi-Cursor Editing",
-      "content": "Hold `Alt` (`Option` on macOS) and click to add multiple cursors. Edit multiple lines simultaneously!"
+      "id": 3,
+      "title": "मल्टी-कर्सर एडिटिंग",
+      "content": "`Alt` (`macOS पर Option`) दबाकर रखें और कई कर्सर जोड़ने के लिए क्लिक करें। एक साथ कई लाइनों को संपादित करें!"
     },
     {
-      "title": "Zen Mode",
-      "content": "Toggle distraction-free coding with `Ctrl+K Z`. Press `Esc` twice to exit."
+      "id": 4,
+      "title": "ज़ेन मोड",
+      "content": "`Ctrl+K Z` के साथ विक्षेप-मुक्त कोडिंग टॉगल करें। बाहर निकलने के लिए `Esc` दो बार दबाएं।"
     },
     {
-      "title": "Integrated Terminal",
-      "content": "Toggle the integrated terminal with `` Ctrl+` `` (backtick). Keep coding and running commands without switching windows."
+      "id": 5,
+      "title": "एकीकृत टर्मिनल",
+      "content": "`` Ctrl+` `` (बैकटिक) के साथ एकीकृत टर्मिनल टॉगल करें। विंडो बदले बिना कोडिंग और कमांड चलाते रहें।"
     },
     {
-      "title": "Smart Selection",
-      "content": "Press `Ctrl+D` to select the next occurrence of the current selection. Great for renaming variables or making multiple similar changes!"
+      "id": 6,
+      "title": "स्मार्ट सिलेक्शन",
+      "content": "वर्तमान चयन की अगली घटना का चयन करने के लिए `Ctrl+D` दबाएं। वेरिएबल्स का नाम बदलने या कई समान परिवर्तन करने के लिए बेहतरीन!"
     },
     {
-      "title": "Split Editor Views",
-      "content": "Use `Ctrl+\\` to split the editor into multiple panes. Perfect for viewing different parts of the same file or comparing files side by side."
+      "id": 7,
+      "title": "स्प्लिट एडिटर व्यूज़",
+      "content": "एडिटर को कई पैनों में विभाजित करने के लिए `Ctrl+\\` का उपयोग करें। एक ही फ़ाइल के विभिन्न हिस्सों को देखने या फ़ाइलों की साइड-बाई-साइड तुलना करने के लिए परफेक्ट।"
     },
     {
-      "title": "Search Across Files",
-      "content": "Use `Ctrl+Shift+F` to search across all files in your workspace. Perfect for finding specific code or text patterns."
+      "id": 8,
+      "title": "सभी फ़ाइलों में खोजें",
+      "content": "अपने वर्कस्पेस की सभी फ़ाइलों में खोजने के लिए `Ctrl+Shift+F` का उपयोग करें। विशिष्ट कोड या टेक्स्ट पैटर्न खोजने के लिए परफेक्ट।"
     },
     {
-      "title": "Quick File Creation",
-      "content": "Use `Ctrl+N` for a new untitled file. Add multiple files quickly without leaving your keyboard."
+      "id": 9,
+      "title": "त्वरित फ़ाइल निर्माण",
+      "content": "नई अनटाइटल्ड फ़ाइल के लिए `Ctrl+N` का उपयोग करें। कीबोर्ड छोड़े बिना जल्दी कई फ़ाइलें जोड़ें।"
     },
     {
-      "title": "IntelliSense Everywhere",
-      "content": "Press `Ctrl+Space` anywhere to manually trigger IntelliSense suggestions. Works in code, settings, and even JSON files!"
+      "id": 10,
+      "title": "हर जगह IntelliSense",
+      "content": "IntelliSense सुझावों को मैन्युअल रूप से ट्रिगर करने के लिए कहीं भी `Ctrl+Space` दबाएं। कोड, सेटिंग्स और यहां तक कि JSON फ़ाइलों में भी काम करता है!"
+    },
+    {
+      "id": 11,
+      "title": "ब्रेडक्रम्ब नेविगेशन",
+      "content": "एडिटर के ऊपर ब्रेडक्रम्ब्स पर क्लिक करें या अपनी फ़ाइल की संरचना के माध्यम से त्वरित नेविगेट करने के लिए `Ctrl+Shift+.` दबाएं।"
+    },
+    {
+      "id": 12,
+      "title": "त्वरित फिक्स और एक्शन",
+      "content": "जब आप लाइटबल्ब 💡 देखें तो त्वरित फिक्स और रिफैक्टरिंग विकल्प देखने के लिए `Ctrl+.` दबाएं।"
+    },
+    {
+      "id": 13,
+      "title": "आगे और पीछे नेविगेट करें",
+      "content": "अपनी कर्सर स्थितियों के माध्यम से आगे और पीछे नेविगेट करने के लिए `Alt+Left` और `Alt+Right` का उपयोग करें।"
+    },
+    {
+      "id": 14,
+      "title": "लाइन कमेंट टॉगल",
+      "content": "लाइन कमेंट्स टॉगल करने के लिए `Ctrl+/` दबाएं। कई चुनी गई लाइनों के साथ भी काम करता है!"
+    },
+    {
+      "id": 15,
+      "title": "लाइनों को ऊपर/नीचे स्थानांतरित करें",
+      "content": "लाइनों को ऊपर या नीचे स्थानांतरित करने के लिए `Alt+Up` या `Alt+Down` का उपयोग करें। कोड को जल्दी से पुनर्व्यवस्थित करने के लिए बेहतरीन!"
+    },
+    {
+      "id": 16,
+      "title": "डॉक्यूमेंट फॉर्मेट",
+      "content": "अपने पूरे दस्तावेज़ को फॉर्मेट करने के लिए `Shift+Alt+F` दबाएं। अपना कोड साफ और सुसंगत रखें!"
+    },
+    {
+      "id": 17,
+      "title": "मिनीमैप नेविगेशन",
+      "content": "बड़ी फ़ाइलों में त्वरित स्क्रॉलिंग के लिए एडिटर के दाईं ओर मिनीमैप का उपयोग करें। `Ctrl+Shift+P` के साथ इसे टॉगल करें और 'Toggle Minimap' खोजें।"
+    },
+    {
+      "id": 18,
+      "title": "डेफिनिशन पर जाएं",
+      "content": "प्रतीक की परिभाषा पर जाने के लिए `F12` दबाएं। परिभाषाओं को झांकने के लिए `Ctrl` दबाकर रखें और कोड पर होवर करें!"
+    },
+    {
+      "id": 19,
+      "title": "सभी रेफरेंसेस खोजें",
+      "content": "वर्तमान प्रतीक के सभी रेफरेंसेस खोजने के लिए `Shift+Alt+F12` दबाएं। आपके प्रोजेक्ट में कोड कैसे उपयोग किया जाता है, यह समझने के लिए बेहतरीन।"
+    },
+    {
+      "id": 20,
+      "title": "प्रतीक का नाम बदलें",
+      "content": "प्रतीक का नाम बदलने और आपके कोड में सभी रेफरेंसेस को स्वचालित रूप से अपडेट करने के लिए `F2` दबाएं।"
+    },
+    {
+      "id": 21,
+      "title": "समस्या पैनल",
+      "content": "समस्या पैनल को टॉगल करने और अपने वर्कस्पेस में सभी त्रुटियों और चेतावनियों को देखने के लिए `Ctrl+Shift+M` का उपयोग करें।"
+    },
+    {
+      "id": 22,
+      "title": "त्वरित पिछली फ़ाइल खोलें",
+      "content": "हाल ही में उपयोग की गई फ़ाइलों के बीच त्वरित स्विच करने के लिए `Ctrl+Tab` दबाएं। अधिक विकल्प देखने के लिए `Ctrl` दबाकर रखें!"
+    },
+    {
+      "id": 23,
+      "title": "वर्ड रैप टॉगल",
+      "content": "वर्ड रैप टॉगल करने के लिए `Alt+Z` दबाएं। लंबी लाइनों के लिए अब कोई हॉरिज़ॉन्टल स्क्रॉलिंग नहीं!"
+    },
+    {
+      "id": 24,
+      "title": "कोड फोल्ड/अनफोल्ड",
+      "content": "कोड ब्लॉक्स को फोल्ड और अनफोल्ड करने के लिए `Ctrl+Shift+[` और `Ctrl+Shift+]` का उपयोग करें। अपने एडिटर को व्यवस्थित रखें!"
+    },
+    {
+      "id": 25,
+      "title": "साइड बाई साइड एडिटिंग",
+      "content": "फ़ाइल टैब को एडिटर के साइड में ड्रैग और ड्रॉप करके इसे साइड बाई साइड खोलें। कोड की तुलना या संदर्भ के लिए परफेक्ट!"
+    },
+    {
+      "id": 26,
+      "title": "कॉलम सिलेक्शन",
+      "content": "कॉलम में टेक्स्ट का चयन करने के लिए माउस ड्रैग करते समय `Shift+Alt` दबाकर रखें। संरचित टेक्स्ट या टेबल एडिटिंग के लिए परफेक्ट!"
+    },
+    {
+      "id": 27,
+      "title": "फ़ाइल हिस्ट्री नेविगेट करें",
+      "content": "वेब ब्राउज़र की तरह अपने फ़ाइल नेविगेशन हिस्ट्री के माध्यम से नेविगेट करने के लिए `Alt+Left` और `Alt+Right` का उपयोग करें!"
+    },
+    {
+      "id": 28,
+      "title": "त्वरित पैरामीटर हिंट",
+      "content": "फ़ंक्शन के लिए पैरामीटर हिंट देखने के लिए `Ctrl+Shift+Space` दबाएं। फ़ंक्शन आर्गुमेंट्स याद रखने के लिए बेहतरीन!"
+    },
+    {
+      "id": 29,
+      "title": "कलर थीम स्विचिंग",
+      "content": "`Ctrl+K Ctrl+T` के साथ त्वरित रूप से कलर थीम बदलें। अपना परफेक्ट कोडिंग माहौल खोजने के लिए विभिन्न थीम ट्राई करें!"
+    },
+    {
+      "id": 30,
+      "title": "लाइन डुप्लिकेट",
+      "content": "लाइनों को ऊपर या नीचे कॉपी करने के लिए `Shift+Alt+Up` या `Shift+Alt+Down` दबाएं। कॉपी और पेस्ट की ज़रूरत नहीं!"
+    },
+    {
+      "id": 31,
+      "title": "लाइनें जॉइन करें",
+      "content": "कई लाइनों को एक में जॉइन करने के लिए `Ctrl+J` का उपयोग करें। सभी को जॉइन करने के लिए पहले कई लाइनें चुनें!"
+    },
+    {
+      "id": 32,
+      "title": "एक्टिविटी बार टॉगल",
+      "content": "`Ctrl+B` के साथ एक्टिविटी बार टॉगल करके स्क्रीन स्पेस बचाएं। वह कीमती हॉरिज़ॉन्टल स्पेस वापस पाएं!"
+    },
+    {
+      "id": 33,
+      "title": "IntelliSense टैब कंप्लीशन",
+      "content": "IntelliSense इनवोक करने के बाद, सुझाव पूरा करने और कर्सर पर शब्द बदलने के लिए `Enter` के बजाय `Tab` का उपयोग करें।"
+    },
+    {
+      "id": 34,
+      "title": "रेफरेंसेस पीक करें",
+      "content": "अपनी वर्तमान स्थिति छोड़े बिना रेफरेंसेस पीक करने के लिए `Shift+F12` का उपयोग करें। पूरे विवरण देखने के लिए 'Open to the Side' पर क्लिक करें!"
+    },
+    {
+      "id": 35,
+      "title": "टर्मिनल क्लियर करें",
+      "content": "टर्मिनल में `Ctrl+K` के साथ (या 'clear' टाइप करके) एकीकृत टर्मिनल को क्लियर करें। अपने वर्कस्पेस को व्यवस्थित रखें!"
+    },
+    {
+      "id": 36,
+      "title": "सब सेव करें",
+      "content": "एक साथ सभी खुली फ़ाइलों को सेव करने के लिए `Ctrl+K S` का उपयोग करें। अपने बदलाव सेव करना कभी न भूलें!"
+    },
+    {
+      "id": 37,
+      "title": "प्रतीक द्वारा खोजें",
+      "content": "वर्तमान फ़ाइल के भीतर प्रतीकों (फ़ंक्शन, क्लासेज, आदि) पर त्वरित नेविगेट करने के लिए `Ctrl+Shift+O` दबाएं।"
+    },
+    {
+      "id": 38,
+      "title": "वर्कस्पेस प्रतीक खोज",
+      "content": "अपने पूरे वर्कस्पेस में प्रतीकों की खोज करने के लिए `Ctrl+T` का उपयोग करें। कोई भी फ़ंक्शन या क्लास तुरंत खोजें!"
+    },
+    {
+      "id": 39,
+      "title": "ऑटो सेव",
+      "content": "File > Auto Save के माध्यम से या सेटिंग्स में `files.autoSave` को 'afterDelay' पर सेट करके ऑटो सेव सक्षम करें। फिर कभी बदलाव न खोएं!"
+    },
+    {
+      "id": 40,
+      "title": "कीबोर्ड शॉर्टकट रेफरेंस",
+      "content": "कीबोर्ड शॉर्टकट की PDF फ़ाइल खोलने के लिए `Ctrl+K Ctrl+R` दबाएं। नए शॉर्टकट सीखने के लिए बेहतरीन!"
+    },
+    {
+      "id": 41,
+      "title": "इंडेंट बढ़ाएं/घटाएं",
+      "content": "इंडेंट बढ़ाने के लिए `Ctrl+]` और घटाने के लिए `Ctrl+[` का उपयोग करें। कई चुनी गई लाइनों के साथ काम करता है!"
+    },
+    {
+      "id": 42,
+      "title": "टर्मिनल स्प्लिट करें",
+      "content": "टाइटल बार में + बटन या 'Split Terminal' कमांड का उपयोग करके एकीकृत टर्मिनल को स्प्लिट करें।"
+    },
+    {
+      "id": 43,
+      "title": "ट्रेलिंग व्हाइटस्पेस हटाएं",
+      "content": "ट्रेलिंग व्हाइटस्पेस हटाने के लिए `Ctrl+K Ctrl+X` का उपयोग करें। अपने कोड को स्वचालित रूप से साफ रखें!"
     }
   ]
 }
