--- a/data/locales/zh.json
+++ b/data/locales/zh.json
@@ -2,44 +2,115 @@
   "$schema": "../tips.schema.json",
   "tips": [
     {
+      "id": 1,
       "title": "快速文件导航",
       "content": "按 `Ctrl+P` 快速搜索并打开工作区中的文件。开始键入文件名以过滤列表。"
     },
     {
+      "id": 2,
       "title": "命令面板",
-      "content": "使用 `Ctrl+Shift+P` (Windows/Linux) 或 `Cmd+Shift+P` (macOS) 访问所有 VS Code 命令。这是您使用 VS Code 所有功能的入口！"
+      "content": "使用 `Ctrl+Shift+P` (Windows/Linux) 或 `Cmd+Shift+P` (macOS) 访问所有 VS Code 命令。这是你使用 VS Code 全部功能的入口！"
     },
     {
+      "id": 3,
       "title": "多光标编辑",
-      "content": "按住 `Alt` (macOS 上为 `Option`) 并点击以添加多个光标。同时编辑多行！"
+      "content": "按住 `Alt`（macOS 为 `Option`）并点击以添加多个光标，同时编辑多行。"
     },
+    { "id": 4, "title": "专注模式", "content": "使用 `Ctrl+K Z` 切换无干扰专注模式。按两次 `Esc` 退出。" },
     {
-      "title": "专注模式",
-      "content": "使用 `Ctrl+K Z` 切换无干扰编码模式。按两次 `Esc` 退出。"
-    },
-    {
+      "id": 5,
       "title": "集成终端",
-      "content": "使用 `` Ctrl+` `` (反引号) 切换集成终端。无需切换窗口即可编码和运行命令。"
+      "content": "使用 `` Ctrl+` ``（反引号）切换集成终端，无需切换窗口即可继续编码和运行命令。"
     },
     {
+      "id": 6,
       "title": "智能选择",
-      "content": "按 `Ctrl+D` 选择当前选择的下一个匹配项。非常适合重命名变量或进行多个类似的更改！"
+      "content": "按 `Ctrl+D` 选择当前选中文本的下一个匹配项，适合批量重命名或多处相似修改。"
     },
     {
+      "id": 7,
       "title": "分割编辑器视图",
-      "content": "使用 `Ctrl+\\` 将编辑器分割为多个窗格。非常适合查看同一文件的不同部分或并排比较文件。"
+      "content": "使用 `Ctrl+\\` 将编辑器分割为多个窗格，便于并排查看或比较文件。"
     },
     {
+      "id": 8,
       "title": "跨文件搜索",
-      "content": "使用 `Ctrl+Shift+F` 在工作区的所有文件中搜索。非常适合查找特定的代码或文本模式。"
+      "content": "使用 `Ctrl+Shift+F` 在全部文件中搜索，定位特定代码或文本模式。"
     },
     {
+      "id": 9,
       "title": "快速文件创建",
-      "content": "使用 `Ctrl+N` 创建新的无标题文件。无需离开键盘即可快速添加多个文件。"
+      "content": "使用 `Ctrl+N` 创建新的未命名文件，连续添加文件无需离开键盘。"
     },
     {
-      "title": "无处不在的智能感知",
-      "content": "在任何地方按 `Ctrl+Space` 手动触发智能感知建议。适用于代码、设置，甚至 JSON 文件！"
-    }
+      "id": 10,
+      "title": "智能感知随处可用",
+      "content": "按 `Ctrl+Space` 手动触发智能感知，适用于代码、设置甚至 JSON。"
+    },
+    {
+      "id": 11,
+      "title": "面包屑导航",
+      "content": "点击编辑器上方的面包屑或按 `Ctrl+Shift+.` 快速在文件结构中导航。"
+    },
+    { "id": 12, "title": "快速修复与操作", "content": "看到灯泡 💡 时按 `Ctrl+.` 查看快速修复和重构选项。" },
+    {
+      "id": 13,
+      "title": "向后/向前导航",
+      "content": "使用 `Alt+Left` 和 `Alt+Right` 在光标历史位置之间来回跳转。"
+    },
+    { "id": 14, "title": "切换行注释", "content": "按 `Ctrl+/` 切换行注释，可作用于多行选中内容。" },
+    {
+      "id": 15,
+      "title": "上下移动行",
+      "content": "使用 `Alt+Up` 或 `Alt+Down` 移动当前行/选中行，快速调整结构。"
+    },
+    { "id": 16, "title": "格式化文档", "content": "按 `Shift+Alt+F` 格式化整个文档，保持风格一致。" },
+    {
+      "id": 17,
+      "title": "小地图导航",
+      "content": "利用右侧小地图快速滚动大文件，可通过命令面板搜索 'Toggle Minimap' 切换。"
+    },
+    { "id": 18, "title": "跳转到定义", "content": "按 `F12` 跳转到符号定义；按住 `Ctrl` 悬停可预览。" },
+    { "id": 19, "title": "查找所有引用", "content": "按 `Shift+Alt+F12` 列出当前符号的所有引用。" },
+    { "id": 20, "title": "重命名符号", "content": "按 `F2` 重命名符号并自动更新所有引用。" },
+    { "id": 21, "title": "问题面板", "content": "按 `Ctrl+Shift+M` 打开问题面板查看错误与警告。" },
+    {
+      "id": 22,
+      "title": "快速打开上一个文件",
+      "content": "按 `Ctrl+Tab` 在最近文件间切换；保持按住可显示列表。"
+    },
+    { "id": 23, "title": "切换自动换行", "content": "按 `Alt+Z` 切换自动换行，避免水平滚动。" },
+    {
+      "id": 24,
+      "title": "折叠/展开代码",
+      "content": "使用 `Ctrl+Shift+[` 与 `Ctrl+Shift+]` 折叠或展开代码块。"
+    },
+    { "id": 25, "title": "并排编辑", "content": "拖动文件标签到侧边实现并排编辑，便于比较或参考。" },
+    { "id": 26, "title": "列选择", "content": "按住 `Shift+Alt` 拖动鼠标进行列块选择，适合结构化文本。" },
+    { "id": 27, "title": "文件导航历史", "content": "使用 `Alt+Left` / `Alt+Right` 浏览文件位置历史。" },
+    { "id": 28, "title": "快速参数提示", "content": "按 `Ctrl+Shift+Space` 显示函数参数提示。" },
+    { "id": 29, "title": "切换颜色主题", "content": "使用 `Ctrl+K Ctrl+T` 快速切换主题，找到最舒适的配色。" },
+    { "id": 30, "title": "复制行", "content": "按 `Shift+Alt+Up` 或 `Shift+Alt+Down` 向上/下复制当前行。" },
+    { "id": 31, "title": "合并行", "content": "使用 `Ctrl+J` 将多行合并为一行。" },
+    { "id": 32, "title": "切换活动栏", "content": "按 `Ctrl+B` 显示/隐藏活动栏，释放横向空间。" },
+    {
+      "id": 33,
+      "title": "IntelliSense Tab 补全",
+      "content": "触发 IntelliSense 后用 `Tab` 而不是 `Enter` 完成并替换单词。"
+    },
+    { "id": 34, "title": "预览引用", "content": "使用 `Shift+F12` 在当前位置预览引用，可选择侧边打开。" },
+    { "id": 35, "title": "清空终端", "content": "在终端用 `Ctrl+K`（或输入 clear）清空输出。" },
+    { "id": 36, "title": "全部保存", "content": "按 `Ctrl+K S` 保存所有已打开文件。" },
+    { "id": 37, "title": "按符号查找", "content": "按 `Ctrl+Shift+O` 在当前文件按符号跳转。" },
+    { "id": 38, "title": "工作区符号搜索", "content": "按 `Ctrl+T` 在整个工作区搜索符号。" },
+    {
+      "id": 39,
+      "title": "自动保存",
+      "content": "通过 文件 > 自动保存 或设置 `files.autoSave` 为 'afterDelay' 开启自动保存。"
+    },
+    { "id": 40, "title": "快捷键参考", "content": "按 `Ctrl+K Ctrl+R` 打开快捷键参考 PDF。" },
+    { "id": 41, "title": "增加/减少缩进", "content": "用 `Ctrl+]` 增加缩进，`Ctrl+[` 减少缩进。" },
+    { "id": 42, "title": "分割终端", "content": "使用终端标题栏 + 按钮或命令 'Split Terminal' 分割终端。" },
+    { "id": 43, "title": "删除行尾空白", "content": "按 `Ctrl+K Ctrl+X` 删除行尾多余空白。" }
   ]
 }
