--- a/data/locales/ru.json
+++ b/data/locales/ru.json
@@ -2,44 +2,219 @@
   "$schema": "../tips.schema.json",
   "tips": [
     {
-      "title": "Quick File Navigation",
-      "content": "Press `Ctrl+P` to quickly search and open files in your workspace. Start typing the filename to filter the list."
+      "id": 1,
+      "title": "Быстрая навигация по файлам",
+      "content": "Нажмите `Ctrl+P` для быстрого поиска и открытия файлов в вашем рабочем пространстве. Начните вводить имя файла для фильтрации списка."
     },
     {
-      "title": "Command Palette",
-      "content": "Access all VS Code commands with `Ctrl+Shift+P` (Windows/Linux) or `Cmd+Shift+P` (macOS). This is your gateway to everything VS Code can do!"
+      "id": 2,
+      "title": "Палитра команд",
+      "content": "Получите доступ ко всем командам VS Code с помощью `Ctrl+Shift+P` (Windows/Linux) или `Cmd+Shift+P` (macOS). Это ваш портал ко всем возможностям VS Code!"
     },
     {
-      "title": "Multi-Cursor Editing",
-      "content": "Hold `Alt` (`Option` on macOS) and click to add multiple cursors. Edit multiple lines simultaneously!"
+      "id": 3,
+      "title": "Редактирование с несколькими курсорами",
+      "content": "Удерживайте `Alt` (`Option` на macOS) и кликайте для добавления нескольких курсоров. Редактируйте несколько строк одновременно!"
     },
     {
-      "title": "Zen Mode",
-      "content": "Toggle distraction-free coding with `Ctrl+K Z`. Press `Esc` twice to exit."
+      "id": 4,
+      "title": "Режим Дзен",
+      "content": "Переключитесь на кодирование без отвлечений с помощью `Ctrl+K Z`. Нажмите `Esc` дважды для выхода."
     },
     {
-      "title": "Integrated Terminal",
-      "content": "Toggle the integrated terminal with `` Ctrl+` `` (backtick). Keep coding and running commands without switching windows."
+      "id": 5,
+      "title": "Встроенный терминал",
+      "content": "Переключайте встроенный терминал с помощью `` Ctrl+` `` (обратная кавычка). Продолжайте кодить и выполнять команды, не переключая окна."
     },
     {
-      "title": "Smart Selection",
-      "content": "Press `Ctrl+D` to select the next occurrence of the current selection. Great for renaming variables or making multiple similar changes!"
+      "id": 6,
+      "title": "Умное выделение",
+      "content": "Нажмите `Ctrl+D` для выбора следующего вхождения текущего выделения. Отлично подходит для переименования переменных или выполнения нескольких похожих изменений!"
     },
     {
-      "title": "Split Editor Views",
-      "content": "Use `Ctrl+\\` to split the editor into multiple panes. Perfect for viewing different parts of the same file or comparing files side by side."
+      "id": 7,
+      "title": "Разделение окон редактора",
+      "content": "Используйте `Ctrl+\\` для разделения редактора на несколько панелей. Идеально для просмотра разных частей одного файла или сравнения файлов бок о бок."
     },
     {
-      "title": "Search Across Files",
-      "content": "Use `Ctrl+Shift+F` to search across all files in your workspace. Perfect for finding specific code or text patterns."
+      "id": 8,
+      "title": "Поиск по всем файлам",
+      "content": "Используйте `Ctrl+Shift+F` для поиска во всех файлах вашего рабочего пространства. Идеально для поиска конкретного кода или текстовых шаблонов."
     },
     {
-      "title": "Quick File Creation",
-      "content": "Use `Ctrl+N` for a new untitled file. Add multiple files quickly without leaving your keyboard."
+      "id": 9,
+      "title": "Быстрое создание файла",
+      "content": "Используйте `Ctrl+N` для создания нового файла без названия. Быстро добавляйте несколько файлов, не отрываясь от клавиатуры."
     },
     {
-      "title": "IntelliSense Everywhere",
-      "content": "Press `Ctrl+Space` anywhere to manually trigger IntelliSense suggestions. Works in code, settings, and even JSON files!"
+      "id": 10,
+      "title": "IntelliSense везде",
+      "content": "Нажмите `Ctrl+Space` в любом месте для ручного запуска предложений IntelliSense. Работает в коде, настройках и даже в JSON файлах!"
+    },
+    {
+      "id": 11,
+      "title": "Навигация по хлебным крошкам",
+      "content": "Кликайте по хлебным крошкам над редактором или нажмите `Ctrl+Shift+.` для быстрой навигации по структуре вашего файла."
+    },
+    {
+      "id": 12,
+      "title": "Быстрые исправления и действия",
+      "content": "Нажмите `Ctrl+.` когда видите лампочку 💡 для просмотра быстрых исправлений и опций рефакторинга."
+    },
+    {
+      "id": 13,
+      "title": "Навигация назад и вперед",
+      "content": "Используйте `Alt+Left` и `Alt+Right` для навигации назад и вперед по позициям вашего курсора."
+    },
+    {
+      "id": 14,
+      "title": "Переключение комментария строки",
+      "content": "Нажмите `Ctrl+/` для переключения комментариев строки. Также работает с несколькими выделенными строками!"
+    },
+    {
+      "id": 15,
+      "title": "Перемещение строк вверх/вниз",
+      "content": "Используйте `Alt+Up` или `Alt+Down` для перемещения строк вверх или вниз. Отлично подходит для быстрой реорганизации кода!"
+    },
+    {
+      "id": 16,
+      "title": "Форматирование документа",
+      "content": "Нажмите `Shift+Alt+F` для форматирования всего вашего документа. Поддерживайте код чистым и последовательным!"
+    },
+    {
+      "id": 17,
+      "title": "Навигация по мини-карте",
+      "content": "Используйте мини-карту справа от редактора для быстрой прокрутки больших файлов. Переключайте её с помощью `Ctrl+Shift+P` и поиска 'Toggle Minimap'."
+    },
+    {
+      "id": 18,
+      "title": "Перейти к определению",
+      "content": "Нажмите `F12` для перехода к определению символа. Удерживайте `Ctrl` и наведите на код для предварительного просмотра определений!"
+    },
+    {
+      "id": 19,
+      "title": "Найти все ссылки",
+      "content": "Нажмите `Shift+Alt+F12` для поиска всех ссылок на текущий символ. Отлично подходит для понимания того, как код используется в вашем проекте."
+    },
+    {
+      "id": 20,
+      "title": "Переименовать символ",
+      "content": "Нажмите `F2` для переименования символа и автоматического обновления всех ссылок в вашем коде."
+    },
+    {
+      "id": 21,
+      "title": "Панель проблем",
+      "content": "Используйте `Ctrl+Shift+M` для переключения панели проблем и просмотра всех ошибок и предупреждений в вашем рабочем пространстве."
+    },
+    {
+      "id": 22,
+      "title": "Быстрое открытие предыдущего файла",
+      "content": "Нажмите `Ctrl+Tab` для быстрого переключения между недавно использованными файлами. Удерживайте `Ctrl` чтобы увидеть больше опций!"
+    },
+    {
+      "id": 23,
+      "title": "Переключение переноса слов",
+      "content": "Нажмите `Alt+Z` для переключения переноса слов. Больше никакой горизонтальной прокрутки для длинных строк!"
+    },
+    {
+      "id": 24,
+      "title": "Сворачивание/разворачивание кода",
+      "content": "Используйте `Ctrl+Shift+[` и `Ctrl+Shift+]` для сворачивания и разворачивания блоков кода. Поддерживайте порядок в редакторе!"
+    },
+    {
+      "id": 25,
+      "title": "Редактирование бок о бок",
+      "content": "Перетащите вкладку файла в сторону редактора для открытия бок о бок. Идеально для сравнения или референса кода!"
+    },
+    {
+      "id": 26,
+      "title": "Выделение по колонкам",
+      "content": "Удерживайте `Shift+Alt` при перетаскивании мышью для выделения текста в колонках. Идеально для редактирования структурированного текста или таблиц!"
+    },
+    {
+      "id": 27,
+      "title": "Навигация по истории файлов",
+      "content": "Используйте `Alt+Left` и `Alt+Right` для навигации по истории навигации файлов, как в веб-браузере!"
+    },
+    {
+      "id": 28,
+      "title": "Быстрые подсказки параметров",
+      "content": "Нажмите `Ctrl+Shift+Space` для просмотра подсказок параметров функций. Отлично для запоминания аргументов функций!"
+    },
+    {
+      "id": 29,
+      "title": "Переключение цветовых тем",
+      "content": "Быстро переключайте цветовые темы с помощью `Ctrl+K Ctrl+T`. Попробуйте разные темы, чтобы найти идеальную среду для кодирования!"
+    },
+    {
+      "id": 30,
+      "title": "Дублирование строки",
+      "content": "Нажмите `Shift+Alt+Up` или `Shift+Alt+Down` для копирования строк вверх или вниз. Не нужно копировать и вставлять!"
+    },
+    {
+      "id": 31,
+      "title": "Объединение строк",
+      "content": "Используйте `Ctrl+J` для объединения нескольких строк в одну. Сначала выберите несколько строк, чтобы объединить их все!"
+    },
+    {
+      "id": 32,
+      "title": "Переключение панели активности",
+      "content": "Экономьте место на экране, переключая панель активности с помощью `Ctrl+B`. Верните драгоценное горизонтальное пространство!"
+    },
+    {
+      "id": 33,
+      "title": "Автодополнение IntelliSense с Tab",
+      "content": "После вызова IntelliSense используйте `Tab` вместо `Enter` для завершения предложения и замены слова у курсора."
+    },
+    {
+      "id": 34,
+      "title": "Предварительный просмотр ссылок",
+      "content": "Используйте `Shift+F12` для предварительного просмотра ссылок без покидания текущего местоположения. Кликните 'Открыть сбоку' для просмотра полных деталей!"
+    },
+    {
+      "id": 35,
+      "title": "Очистка терминала",
+      "content": "Очищайте встроенный терминал с помощью `Ctrl+K` в терминале (или введите 'clear'). Поддерживайте порядок в рабочем пространстве!"
+    },
+    {
+      "id": 36,
+      "title": "Сохранить все",
+      "content": "Используйте `Ctrl+K S` для сохранения всех открытых файлов сразу. Никогда не забывайте сохранять свои изменения!"
+    },
+    {
+      "id": 37,
+      "title": "Поиск по символам",
+      "content": "Нажмите `Ctrl+Shift+O` для быстрой навигации к символам (функции, классы и т.д.) внутри текущего файла."
+    },
+    {
+      "id": 38,
+      "title": "Поиск символов в рабочем пространстве",
+      "content": "Используйте `Ctrl+T` для поиска символов во всём рабочем пространстве. Мгновенно найдите любую функцию или класс!"
+    },
+    {
+      "id": 39,
+      "title": "Автосохранение",
+      "content": "Включите автосохранение через Файл > Автосохранение или установите `files.autoSave` в 'afterDelay' в настройках. Больше никогда не теряйте изменения!"
+    },
+    {
+      "id": 40,
+      "title": "Справочник горячих клавиш",
+      "content": "Нажмите `Ctrl+K Ctrl+R` для открытия PDF файла с горячими клавишами. Отлично подходит для изучения новых сочетаний!"
+    },
+    {
+      "id": 41,
+      "title": "Увеличить/уменьшить отступ",
+      "content": "Используйте `Ctrl+]` для увеличения отступа и `Ctrl+[` для уменьшения. Работает с несколькими выделенными строками!"
+    },
+    {
+      "id": 42,
+      "title": "Разделение терминала",
+      "content": "Разделите встроенный терминал используя кнопку + в заголовке или команду 'Split Terminal'."
+    },
+    {
+      "id": 43,
+      "title": "Удаление концевых пробелов",
+      "content": "Используйте `Ctrl+K Ctrl+X` для удаления концевых пробелов. Автоматически поддерживайте чистоту кода!"
     }
   ]
 }
